Most responsiveness issues fixed. TODO: landscape on mobile

--- a/server/public/styles.css
+++ b/server/public/styles.css
@@ -1,6 +1,6 @@
 img.catalog-img{
-  object-fit: contain;
-  height: 70%;
+  /* object-fit: contain; */
+  /* height: 70%; */
 }
 
 img.cart-img{
